# w3dviewerPlus

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md
Core/Libraries/Source/EABrowserDispatch/: CMakeLists.txt
Core/Libraries/Source/EABrowserEngine/: CMakeLists.txt
Core/Tools/ParticleEditor/: CColorAlphaDialog.h  CMakeLists.txt  CParticleEditorPage.h  CSwitchesDialog.h  EmissionTypePanels.h  ISwapablePanel.h  MoreParmsDialog.h  ParticleEditor.cpp  ParticleEditorDialog.cpp  ParticleEditorDialog.h  ParticleTypePanels.h  StdAfx.h  VelocityTypePanels.cpp  VelocityTypePanels.h
Core/Tools/W3DView/: AddToLineupDialog.cpp  AddToLineupDialog.h  AdvancedAnimSheet.cpp  AdvancedAnimSheet.h  AggregateNameDialog.cpp  AggregateNameDialog.h  AmbientLightDialog.cpp  AmbientLightDialog.h  AnimMixingPage.cpp  AnimMixingPage.h  AnimReportPage.cpp  AnimReportPage.h  AnimatedSoundOptionsDialog.cpp  AnimatedSoundOptionsDialog.h  AnimationSpeed.h  AssetInfo.cpp  AssetInfo.h  AssetPropertySheet.h  AssetTypes.h  BackgroundBMPDialog.cpp  BackgroundBMPDialog.h  BackgroundColorDialog.cpp  BackgroundColorDialog.h  BackgroundObjectDialog.cpp  BackgroundObjectDialog.h  BoneMgrDialog.cpp  BoneMgrDialog.h  CMakeLists.txt  CameraDistanceDialog.cpp  CameraDistanceDialog.h  CameraSettingsDialog.cpp  CameraSettingsDialog.h  ColorBar.cpp  ColorBar.h  ColorPicker.cpp  ColorPicker.h  ColorPickerDialogClass.cpp  ColorPickerDialogClass.h  ColorSelectionDialog.cpp  ColorSelectionDialog.h  (+111 more)
Core/Tools/W3DView/DarkMode/: DarkMode.cpp
Core/Tools/W3DView/MaterialViewer/: MaterialPanel.cpp  MaterialPanel.h  MaterialPreviewPane.cpp  MaterialPreviewPane.h  MaterialViewerFrame.cpp  MaterialViewerFrame.h  W3dChunkTree.cpp  W3dChunkTree.h  W3dMaterialData.h  W3dMaterialParser.cpp  W3dMaterialParser.h  W3dMaterialWriter.cpp  W3dMaterialWriter.h
Core/Tools/W3DView/Res/: W3DView.manifest  W3DView.rc2  bmp_ico_to_png.py
Dependencies/Utility/: CMakeLists.txt
Dependencies/Utility/Utility/: CppMacros.h  atl_compat.h  comsupp_compat.h  endian_compat.h  pseh_compat.h
Generals/: CMakeLists.txt
Generals/Code/: CMakeLists.txt
Generals/Code/GameEngine/: CMakeLists.txt
Generals/Code/GameEngine/Include/Common/: ActionManager.h  BezFwdIterator.h  BitFlags.h  BitFlagsIO.h  BuildAssistant.h  CriticalSection.h  CustomMatchPreferences.h  DamageFX.h  DataChunk.h  Dict.h  Directory.h  DisabledTypes.h  DiscreteCircle.h  DrawModule.h  Energy.h  FunctionLexicon.h  GameEngine.h  GameLOD.h  GameSpyMiscPreferences.h  GameState.h  GameStateMap.h  Geometry.h  GlobalData.h  INIException.h  IgnorePreferences.h  KindOf.h  LadderPreferences.h  List.h  MapReaderWriterInfo.h  MessageStream.h  MissionStats.h  ModelState.h  Module.h  ModuleFactory.h  Money.h  MultiplayerSettings.h  NameKeyGenerator.h  Overridable.h  Override.h  PartitionSolver.h  (+28 more)
Generals/Code/GameEngine/Include/GameClient/: Anim2D.h  AnimateWindowManager.h  CampaignManager.h  CommandXlat.h  ControlBar.h  ControlBarResizer.h  ControlBarScheme.h  DebugDisplay.h  Diplomacy.h  DisconnectMenu.h  Display.h  Drawable.h  DrawableInfo.h  Eva.h  FontDesc.h  GUICallbacks.h  GUICommandTranslator.h  Gadget.h  GadgetComboBox.h  GadgetListBox.h  GadgetPushButton.h  GadgetSlider.h  GadgetTextEntry.h  GameClient.h  GameInfoWindow.h  GameWindowManager.h  HintSpy.h  HotKey.h  Image.h  InGameUI.h  LookAtXlat.h  MetaEvent.h  PlaceEventTranslator.h  RayEffect.h  SelectionXlat.h  Shadow.h  Shell.h  ShellMenuScheme.h  WindowXlat.h
Generals/Code/GameEngine/Include/GameLogic/: AI.h  AIDock.h  AIGuard.h  AIPlayer.h  AISkirmishPlayer.h  AIStateMachine.h  AITNGuard.h  Armor.h  ArmorSet.h  CaveSystem.h  CrateSystem.h  Damage.h  ExperienceTracker.h  FPUControl.h  FiringTracker.h  GameLogic.h  GhostObject.h  Locomotor.h  LocomotorSet.h  Object.h  ObjectCreationList.h  ObjectIter.h  ObjectTypes.h  PartitionManager.h  PolygonTrigger.h  Powers.h  RankInfo.h  ScriptActions.h  ScriptConditions.h  ScriptEngine.h  Scripts.h  SidesList.h  Squad.h  TerrainLogic.h  TurretAI.h  VictoryConditions.h  Weapon.h  WeaponSet.h
Generals/Code/GameEngine/Include/GameNetwork/: GUIUtil.h  GameSpy.h  GameSpyChat.h  GameSpyGP.h  GameSpyGameInfo.h  GameSpyPersistentStorage.h
Generals/Code/GameEngine/Include/Precompiled/: PreRTS.h
Generals/Code/GameEngine/Source/Common/: BitFlags.cpp  DamageFX.cpp  Dict.cpp  GameEngine.cpp  GameLOD.cpp  GameMain.cpp  GlobalData.cpp  MessageStream.cpp  MiniLog.cpp  MultiplayerSettings.cpp  NameKeyGenerator.cpp  PartitionSolver.cpp  PerfTimer.cpp  Recorder.cpp  SkirmishBattleHonors.cpp  StateMachine.cpp  StatsCollector.cpp  TerrainTypes.cpp  version.cpp
Generals/Code/GameEngine/Source/GameClient/: Display.cpp  Drawable.cpp  (+3 more)
Generals/Code/GameEngineDevice/: CMakeLists.txt
Generals/Code/Main/: CMakeLists.txt  WinMain.cpp
Generals/Code/Tools/: CMakeLists.txt
Generals/Code/Tools/GUIEdit/: CMakeLists.txt
Generals/Code/Tools/ImagePacker/: CMakeLists.txt
Generals/Code/Tools/MapCacheBuilder/: CMakeLists.txt
Generals/Code/Tools/W3DView/: CMakeLists.txt
Generals/Code/Tools/WorldBuilder/: CMakeLists.txt
GeneralsMD/: CMakeLists.txt
GeneralsMD/Code/: CMakeLists.txt
GeneralsMD/Code/GameEngine/: CMakeLists.txt
GeneralsMD/Code/GameEngineDevice/: CMakeLists.txt
GeneralsMD/Code/Main/: CMakeLists.txt  WinMain.cpp
GeneralsMD/Code/Tools/: CMakeLists.txt
GeneralsMD/Code/Tools/GUIEdit/: CMakeLists.txt
GeneralsMD/Code/Tools/ImagePacker/: CMakeLists.txt
GeneralsMD/Code/Tools/MapCacheBuilder/: CMakeLists.txt
GeneralsMD/Code/Tools/W3DView/: CMakeLists.txt
GeneralsMD/Code/Tools/WorldBuilder/: CMakeLists.txt
GeneralsMD/Code/Tools/wdump/: CMakeLists.txt  FindDialog.cpp  FindDialog.h  chunk_d.cpp  rawfilem.cpp  rawfilem.h  wdeview.cpp  wdlview.cpp  wdtview.cpp  wdump.cpp  wdumpdoc.cpp
scripts/clang-tidy-plugin/: CMakeLists.txt  GeneralsGameCodeTidyModule.cpp  GeneralsGameCodeTidyModule.h  README.md
scripts/clang-tidy-plugin/readability/: UseIsEmptyCheck.cpp  UseIsEmptyCheck.h  UseThisInsteadOfSingletonCheck.cpp  UseThisInsteadOfSingletonCheck.h
(+3191 files in other folders)
